crates/common/src/instrument/snapshots/common__instrument__config__tests__config_768x1024.snap
---
source: crates/common/src/instrument/config.rs
expression: config
---
[
  {
    "channel": "Right",
    "nodes": [
      {
        "key": [
          0,
          0
        ],
        "frequency": 120.09213030841954,
        "l": 24.0,
        "phase": 0.0,
        "divisions": 3,
        "cents": 0.0
      },
      {
        "key": [
          0,
          1
        ],
        "frequency": 151.30660290229588,
        "l": 73.92016457157322,
        "phase": 0.1061032953945969,
        "divisions": 3,
        "cents": 400.00000000000006
      },
      {
        "key": [
          0,
          2
        ],
        "frequency": 190.63437398468727,
        "l": 123.84032914314645,
        "phase": 0.2122065907891938,
        "divisions": 3,
        "cents": 800.0000000000001
      }
    ]
  },
  {
    "channel": "Left",
    "nodes": [
      {
        "key": [
          1,
          0
        ],
        "frequency": 169.71245216965124,
        "l": 196.50892313974038,
        "phase": 0.3183098861837907,
        "divisions": 3,
        "cents": 0.0
      },
      {
        "key": [
          1,
          1
        ],
        "frequency": 213.82429091782043,
        "l": 246.4290877113136,
        "phase": 0.4244131815783876,
        "divisions": 3,
        "cents": 400.00000000000006
      },
      {
        "key": [
          1,
          2
        ],
        "frequency": 269.4017251062071,
        "l": 296.3492522828868,
        "phase": 0.5305164769729844,
        "divisions": 3,
        "cents": 799.9999999999998
      }
    ]
  }
]
