crates/common/src/instrument/snapshots/common__instrument__config__tests__config_768x1024_Yo.snap
---
source: crates/common/src/instrument/config.rs
expression: config
---
[
  [
    {
      "channel": "Right",
      "nodes": [
        {
          "key": [
            0,
            0
          ],
          "frequency": 120.0685227126032,
          "l": 169.0257852874896,
          "phase": 0.0,
          "divisions": 3,
          "cents": 0.0
        },
        {
          "key": [
            0,
            1
          ],
          "frequency": 151.27685919538945,
          "l": 218.94594985906284,
          "phase": 0.1061032953945969,
          "divisions": 3,
          "cents": 400.00000000000006
        },
        {
          "key": [
            0,
            2
          ],
          "frequency": 190.59689926225394,
          "l": 268.86611443063606,
          "phase": 0.2122065907891938,
          "divisions": 3,
          "cents": 799.9999999999998
        }
      ]
    },
    {
      "channel": "Left",
      "nodes": [
        {
          "key": [
            1,
            0
          ],
          "frequency": 240.1370454252064,
          "l": 341.53470842723004,
          "phase": 0.3183098861837907,
          "divisions": 3,
          "cents": 0.0
        },
        {
          "key": [
            1,
            1
          ],
          "frequency": 302.5537183907789,
          "l": 391.4548729988033,
          "phase": 0.4244131815783876,
          "divisions": 3,
          "cents": 400.00000000000006
        },
        {
          "key": [
            1,
            2
          ],
          "frequency": 381.1937985245079,
          "l": 441.37503757037655,
          "phase": 0.5305164769729844,
          "divisions": 3,
          "cents": 799.9999999999998
        }
      ]
    }
  ],
  "Yo"
]
