crates/common/src/instrument/snapshots/common__instrument__config__tests__config_800x1280.snap
---
source: crates/common/src/instrument/config.rs
expression: config
---
[
  {
    "channel": "Right",
    "nodes": [
      {
        "key": [
          0,
          0
        ],
        "frequency": 120.04773395710404,
        "l": 24.0,
        "phase": 0.0,
        "divisions": 5,
        "cents": 0.0
      },
      {
        "key": [
          0,
          1
        ],
        "frequency": 137.89863451764714,
        "l": 63.49464164394561,
        "phase": 0.06366197723675814,
        "divisions": 5,
        "cents": 240.00000000000048
      },
      {
        "key": [
          0,
          2
        ],
        "frequency": 158.40393462675857,
        "l": 102.98928328789123,
        "phase": 0.12732395447351627,
        "divisions": 5,
        "cents": 479.9999999999999
      },
      {
        "key": [
          0,
          3
        ],
        "frequency": 181.95833913081546,
        "l": 142.48392493183684,
        "phase": 0.1909859317102744,
        "divisions": 5,
        "cents": 719.9999999999999
      },
      {
        "key": [
          0,
          4
        ],
        "frequency": 209.01524483756035,
        "l": 181.97856657578245,
        "phase": 0.25464790894703254,
        "divisions": 5,
        "cents": 959.9999999999999
      }
    ]
  },
  {
    "channel": "Left",
    "nodes": [
      {
        "key": [
          1,
          0
        ],
        "frequency": 240.00965156191597,
        "l": 240.67320821972805,
        "phase": 0.3183098861837907,
        "divisions": 5,
        "cents": 0.0
      },
      {
        "key": [
          1,
          1
        ],
        "frequency": 275.69869193258444,
        "l": 280.16784986367367,
        "phase": 0.3819718634205488,
        "divisions": 5,
        "cents": 240.00000000000014
      },
      {
        "key": [
          1,
          2
        ],
        "frequency": 316.69463389779406,
        "l": 319.6624915076193,
        "phase": 0.44563384065730693,
        "divisions": 5,
        "cents": 479.9999999999999
      },
      {
        "key": [
          1,
          3
        ],
        "frequency": 363.7866049947843,
        "l": 359.1571331515649,
        "phase": 0.5092958178940651,
        "divisions": 5,
        "cents": 719.9999999999999
      },
      {
        "key": [
          1,
          4
        ],
        "frequency": 417.88107472746486,
        "l": 398.6517747955105,
        "phase": 0.5729577951308232,
        "divisions": 5,
        "cents": 959.9999999999999
      }
    ]
  }
]
