crates/common/src/instrument/snapshots/common__instrument__config__tests__config_800x1280_Yo.snap
---
source: crates/common/src/instrument/config.rs
expression: config
---
[
  [
    {
      "channel": "Right",
      "nodes": [
        {
          "key": [
            0,
            0
          ],
          "frequency": 120.03336355514709,
          "phase": 0.0,
          "cents": 0.0,
          "l_mm": 283.2495862639523,
          "w_kg": 150000.0,
          "v_cm3": 18750000.0
        },
        {
          "key": [
            0,
            1
          ],
          "frequency": 151.23256143281392,
          "phase": 0.16666666666666666,
          "cents": 400.00000000000006,
          "l_mm": 332.62640210549483,
          "w_kg": 6325.785722762562,
          "v_cm3": 1376709.3877170952
        },
        {
          "key": [
            0,
            2
          ],
          "frequency": 190.5410875787218,
          "phase": 0.3333333333333333,
          "cents": 799.9999999999997,
          "l_mm": 382.00321794703734,
          "w_kg": 266.77043340204443,
          "v_cm3": 101084.19937218018
        }
      ]
    },
    {
      "channel": "Left",
      "nodes": [
        {
          "key": [
            1,
            0
          ],
          "frequency": 240.0738816628857,
          "phase": 0.5,
          "cents": 0.0,
          "l_mm": 453.88086126067515,
          "w_kg": 11.245624043646393,
          "v_cm3": 7419.557207339474
        },
        {
          "key": [
            1,
            1
          ],
          "frequency": 302.47413703704046,
          "phase": 0.6666666666666666,
          "cents": 399.9999999999997,
          "l_mm": 503.25767710221766,
          "w_kg": 0.4742493867923583,
          "v_cm3": 544.7772832025753
        },
        {
          "key": [
            1,
            2
          ],
          "frequency": 381.0935323017538,
          "phase": 0.8333333333333333,
          "cents": 799.9999999999998,
          "l_mm": 552.6344929437602,
          "w_kg": 0.02,
          "v_cm3": 40.0
        }
      ]
    }
  ],
  "Yo"
]
