crates/common/src/instrument/snapshots/common__instrument__config__tests__config_810x1080.snap
---
source: crates/common/src/instrument/config.rs
expression: config
---
[
  {
    "channel": "Right",
    "nodes": [
      {
        "key": [
          0,
          0
        ],
        "frequency": 240.14808581206347,
        "l": 0.0,
        "phase": 0.0,
        "divisions": 3,
        "cents": 1200.0
      },
      {
        "key": [
          0,
          1
        ],
        "frequency": 190.6056620231095,
        "l": 55.014058915611315,
        "phase": 0.1061032953945969,
        "divisions": 3,
        "cents": 799.9999999999998
      },
      {
        "key": [
          0,
          2
        ],
        "frequency": 151.28381420328955,
        "l": 110.02811783122263,
        "phase": 0.2122065907891938,
        "divisions": 3,
        "cents": 400.00000000000006
      }
    ]
  },
  {
    "channel": "Left",
    "nodes": [
      {
        "key": [
          1,
          0
        ],
        "frequency": 480.19335829719984,
        "l": 190.11187448053025,
        "phase": 0.3183098861837907,
        "divisions": 3,
        "cents": 1200.0
      },
      {
        "key": [
          1,
          1
        ],
        "frequency": 381.1297210545588,
        "l": 245.12593339614156,
        "phase": 0.4244131815783876,
        "divisions": 3,
        "cents": 800.0000000000001
      },
      {
        "key": [
          1,
          2
        ],
        "frequency": 302.5028600691765,
        "l": 300.13999231175285,
        "phase": 0.5305164769729844,
        "divisions": 3,
        "cents": 400.00000000000006
      }
    ]
  }
]
