crates/common/src/instrument/snapshots/common__instrument__config__tests__config_810x1080_In.snap
---
source: crates/common/src/instrument/config.rs
expression: config
---
[
  [
    {
      "channel": "Right",
      "nodes": [
        {
          "key": [
            0,
            0
          ],
          "frequency": 159.40769595107636,
          "l": 175.62140113315183,
          "phase": 0.0,
          "divisions": 3,
          "cents": 491.4810826274373
        },
        {
          "key": [
            0,
            1
          ],
          "frequency": 191.57923156025814,
          "l": 230.63546004876315,
          "phase": 0.1061032953945969,
          "divisions": 3,
          "cents": 809.7449505626737
        },
        {
          "key": [
            0,
            2
          ],
          "frequency": 240.01984823368605,
          "l": 285.64951896437447,
          "phase": 0.2122065907891938,
          "divisions": 3,
          "cents": 1200.0
        }
      ]
    },
    {
      "channel": "Left",
      "nodes": [
        {
          "key": [
            1,
            0
          ],
          "frequency": 318.8969435518888,
          "l": 365.73327561368205,
          "phase": 0.3183098861837907,
          "divisions": 3,
          "cents": 491.4810826274373
        },
        {
          "key": [
            1,
            1
          ],
          "frequency": 383.2564734599525,
          "l": 420.74733452929337,
          "phase": 0.4244131815783876,
          "divisions": 3,
          "cents": 809.7449505626737
        },
        {
          "key": [
            1,
            2
          ],
          "frequency": 480.1624886228955,
          "l": 475.7613934449047,
          "phase": 0.5305164769729844,
          "divisions": 3,
          "cents": 1200.0
        }
      ]
    }
  ],
  "In"
]
