crates/common/src/instrument/snapshots/common__instrument__config__tests__config_820x1180.snap
---
source: crates/common/src/instrument/config.rs
expression: config
---
[
  {
    "channel": "Right",
    "nodes": [
      {
        "key": [
          0,
          0
        ],
        "frequency": 120.01161489162702,
        "l": 24.0,
        "phase": 0.0,
        "divisions": 5,
        "cents": 0.0
      },
      {
        "key": [
          0,
          1
        ],
        "frequency": 137.85714460654964,
        "l": 61.05904490872328,
        "phase": 0.06366197723675814,
        "divisions": 5,
        "cents": 240.00000000000014
      },
      {
        "key": [
          0,
          2
        ],
        "frequency": 158.3562752341319,
        "l": 98.11808981744656,
        "phase": 0.12732395447351627,
        "divisions": 5,
        "cents": 479.9999999999999
      },
      {
        "key": [
          0,
          3
        ],
        "frequency": 181.90359286490505,
        "l": 135.17713472616984,
        "phase": 0.1909859317102744,
        "divisions": 5,
        "cents": 719.9999999999999
      },
      {
        "key": [
          0,
          4
        ],
        "frequency": 208.95235789196684,
        "l": 172.23617963489312,
        "phase": 0.25464790894703254,
        "divisions": 5,
        "cents": 959.9999999999999
      }
    ]
  },
  {
    "channel": "Left",
    "nodes": [
      {
        "key": [
          1,
          0
        ],
        "frequency": 169.80498236758658,
        "l": 228.4952245436164,
        "phase": 0.3183098861837907,
        "divisions": 5,
        "cents": 0.0
      },
      {
        "key": [
          1,
          1
        ],
        "frequency": 195.05470391594724,
        "l": 265.55426945233967,
        "phase": 0.3819718634205488,
        "divisions": 5,
        "cents": 240.00000000000014
      },
      {
        "key": [
          1,
          2
        ],
        "frequency": 224.0590175226823,
        "l": 302.613314361063,
        "phase": 0.44563384065730693,
        "divisions": 5,
        "cents": 479.9999999999999
      },
      {
        "key": [
          1,
          3
        ],
        "frequency": 257.376224850557,
        "l": 339.6723592697863,
        "phase": 0.5092958178940651,
        "divisions": 5,
        "cents": 719.9999999999999
      },
      {
        "key": [
          1,
          4
        ],
        "frequency": 295.64764610118186,
        "l": 376.7314041785096,
        "phase": 0.5729577951308232,
        "divisions": 5,
        "cents": 960.0000000000002
      }
    ]
  }
]
