crates/common/src/instrument/snapshots/common__instrument__config__tests__config_820x1180_Yo.snap
---
source: crates/common/src/instrument/config.rs
expression: config
---
[
  [
    {
      "channel": "Right",
      "nodes": [
        {
          "key": [
            0,
            0
          ],
          "frequency": 120.06077577960441,
          "l": 226.21249999999998,
          "phase": 0.0,
          "divisions": 5,
          "cents": 0.0
        },
        {
          "key": [
            0,
            1
          ],
          "frequency": 137.91361563769945,
          "l": 263.2715449087233,
          "phase": 0.06366197723675814,
          "divisions": 5,
          "cents": 240.00000000000014
        },
        {
          "key": [
            0,
            2
          ],
          "frequency": 158.42114341471873,
          "l": 300.3305898174466,
          "phase": 0.12732395447351627,
          "divisions": 5,
          "cents": 479.9999999999999
        },
        {
          "key": [
            0,
            3
          ],
          "frequency": 181.97810683723677,
          "l": 337.3896347261699,
          "phase": 0.1909859317102744,
          "divisions": 5,
          "cents": 720.0000000000001
        },
        {
          "key": [
            0,
            4
          ],
          "frequency": 209.03795196940857,
          "l": 374.4486796348932,
          "phase": 0.25464790894703254,
          "divisions": 5,
          "cents": 959.9999999999999
        }
      ]
    },
    {
      "channel": "Left",
      "nodes": [
        {
          "key": [
            1,
            0
          ],
          "frequency": 240.14913042700297,
          "l": 430.7077245436165,
          "phase": 0.3183098861837907,
          "divisions": 5,
          "cents": 0.0
        },
        {
          "key": [
            1,
            1
          ],
          "frequency": 275.8589110754667,
          "l": 467.76676945233976,
          "phase": 0.3819718634205488,
          "divisions": 5,
          "cents": 240.00000000000014
        },
        {
          "key": [
            1,
            2
          ],
          "frequency": 316.87867736366195,
          "l": 504.82581436106307,
          "phase": 0.44563384065730693,
          "divisions": 5,
          "cents": 479.9999999999999
        },
        {
          "key": [
            1,
            3
          ],
          "frequency": 363.9980154212747,
          "l": 541.8848592697864,
          "phase": 0.5092958178940651,
          "divisions": 5,
          "cents": 719.9999999999999
        },
        {
          "key": [
            1,
            4
          ],
          "frequency": 418.12392153660363,
          "l": 578.9439041785097,
          "phase": 0.5729577951308232,
          "divisions": 5,
          "cents": 959.9999999999999
        }
      ]
    }
  ],
  "Yo"
]
