crates/common/src/instrument/snapshots/common__instrument__config__tests__resonance_model_from_layout_cases.snap
---
source: crates/common/src/instrument/config.rs
expression: cases
---
[
  {
    "layout_space_x": 1920.0,
    "layout_space_y": 1080.0,
    "layout_scale": "In",
    "harmonics": 7,
    "gamma": 0.14396231
  },
  {
    "layout_space_x": 1366.0,
    "layout_space_y": 768.0,
    "layout_scale": "Yo",
    "harmonics": 5,
    "gamma": 0.14654998
  },
  {
    "layout_space_x": 1536.0,
    "layout_space_y": 864.0,
    "layout_scale": "In",
    "harmonics": 6,
    "gamma": 0.1456758
  },
  {
    "layout_space_x": 1280.0,
    "layout_space_y": 720.0,
    "layout_scale": "Yo",
    "harmonics": 5,
    "gamma": 0.14655064
  },
  {
    "layout_space_x": 1440.0,
    "layout_space_y": 900.0,
    "layout_scale": "In",
    "harmonics": 6,
    "gamma": 0.1456758
  },
  {
    "layout_space_x": 1600.0,
    "layout_space_y": 900.0,
    "layout_scale": "Yo",
    "harmonics": 6,
    "gamma": 0.13934316
  },
  {
    "layout_space_x": 360.0,
    "layout_space_y": 800.0,
    "layout_scale": "In",
    "harmonics": 5,
    "gamma": 0.1504738
  },
  {
    "layout_space_x": 390.0,
    "layout_space_y": 844.0,
    "layout_scale": "Yo",
    "harmonics": 5,
    "gamma": 0.14654998
  },
  {
    "layout_space_x": 393.0,
    "layout_space_y": 873.0,
    "layout_scale": "In",
    "harmonics": 5,
    "gamma": 0.15046929
  },
  {
    "layout_space_x": 412.0,
    "layout_space_y": 915.0,
    "layout_scale": "Yo",
    "harmonics": 5,
    "gamma": 0.14654998
  },
  {
    "layout_space_x": 414.0,
    "layout_space_y": 896.0,
    "layout_scale": "In",
    "harmonics": 5,
    "gamma": 0.15047649
  },
  {
    "layout_space_x": 768.0,
    "layout_space_y": 1024.0,
    "layout_scale": "Yo",
    "harmonics": 5,
    "gamma": 0.14654998
  },
  {
    "layout_space_x": 810.0,
    "layout_space_y": 1080.0,
    "layout_scale": "In",
    "harmonics": 5,
    "gamma": 0.15046929
  },
  {
    "layout_space_x": 820.0,
    "layout_space_y": 1180.0,
    "layout_scale": "Yo",
    "harmonics": 5,
    "gamma": 0.14654998
  },
  {
    "layout_space_x": 1280.0,
    "layout_space_y": 800.0,
    "layout_scale": "In",
    "harmonics": 5,
    "gamma": 0.15047
  },
  {
    "layout_space_x": 800.0,
    "layout_space_y": 1280.0,
    "layout_scale": "Yo",
    "harmonics": 5,
    "gamma": 0.14655064
  }
]
